added tablet and desktop responsiveness

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ canvas,
 svg {
   display: block;
   max-width: 100%;
+  max-height: 100%;
 }
 /*
     6. Remove built-in form typography styles
@@ -71,6 +72,18 @@ header {
   flex-direction: column;
   gap: 1rem;
   margin-bottom: 5rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.header-pattern {
+  display: none;
+  width: 260px;
+  height: 250px;
+}
+
+.header-pattern img {
+  object-fit: cover;
 }
 
 main {
@@ -121,11 +134,21 @@ main {
   justify-content: center;
   gap: 1rem;
   font-weight: 700;
+  transition: all 0.3s ease-in;
 }
 
 .btn-ios {
   background-color: #191826;
   color: inherit;
+}
+.btn-ios:hover,
+.btn-ios:focus {
+  background-color: #66e2dc;
+}
+
+.btn-android:hover,
+.btn-android:focus {
+  background-color: #ffb964;
 }
 
 footer {
@@ -136,7 +159,101 @@ footer {
   gap: 2rem;
 }
 
+.footer-logo-contact {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 .social-links {
   display: flex;
   gap: 1rem;
+}
+
+/* Define the default color for the social icons */
+.social-links svg {
+  fill: #191826; /* Change this to your desired default color */
+  transition: fill 0.3s ease; /* Add a smooth transition effect */
+}
+
+/* Change the color of the social icons on hover */
+.social-links a:hover svg {
+  fill: #ff0000; /* Change this to your desired hover color */
+}
+
+@media (min-width: 850px) {
+  header {
+    font-size: 1.5rem;
+    margin-bottom: 10rem;
+  }
+
+  h1 {
+    font-size: 3.5rem;
+  }
+  .header-pattern {
+    display: block;
+    position: absolute;
+    right: -120px;
+    top: -25px;
+  }
+
+  .header-info {
+    width: 80%;
+  }
+
+  .equalizer-info {
+    width: 400px;
+    top: 25%;
+    left: 36%;
+  }
+
+  main {
+    height: 500px;
+  }
+
+  .container {
+    max-width: 90%;
+    margin: 0 auto;
+  }
+  footer {
+    margin-top: 5rem;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
+  }
+}
+
+@media (min-width: 1100px) {
+  header {
+    padding-left: 0;
+  }
+
+  h1 {
+    font-size: 4.5rem;
+  }
+
+  .header-pattern {
+    width: 300px;
+    height: 320px;
+    right: 0;
+    top: -35px;
+  }
+  .container {
+    max-width: 1560px;
+  }
+
+  .phone {
+    left: 40%;
+  }
+
+  main {
+    background-position: top center;
+  }
+
+  .equalizer-info {
+    width: 400px;
+    top: 25%;
+    left: 54%;
+  }
 }
